2009-12-18
 - CHANGELOG created