@@ -1,22 +1,0 @@
-//
-// C++ Implementation:
-//
-// Description:
-//
-//
-// Author: Joachim Schiele <js@lastlog.de>, (C) 2008
-//
-// Copyright: See COPYING file that comes with this distribution
-//
-//
-
-#include "ModuleWidget.h"
-
-ModuleWidget::ModuleWidget(QWidget* parent) : QWidget( parent ), Ui::moduleWidget() {
-	setupUi(this);
-}
-
-ModuleWidget::~ModuleWidget() {
-}
-
-
