@@ -1,23 +1,0 @@
-<ui version="4.0" >
- <class>moduleWidget</class>
- <widget class="QWidget" name="moduleWidget" >
-  <property name="geometry" >
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>251</width>
-    <height>706</height>
-   </rect>
-  </property>
-  <property name="windowTitle" >
-   <string>Form</string>
-  </property>
-  <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" >
-    <widget class="QTableView" name="tableView" />
-   </item>
-  </layout>
- </widget>
- <resources/>
- <connections/>
-</ui>
